<resources>
    <string name="app_name">GRASP</string>
    <string name="add">hinzufügen</string>
    <string name="button_save">speichern</string>
    <string name="empty_not_saved">feld ist leer - speichern abgebrochen</string>
    <string name="date">Datum</string>
    <string name="type">Typ</string>
    <string name="tag">Tag</string>
    <string name="value">Wert</string>
    <string name="button_cancel">abbrechen</string>
    <string name="search">Suche</string>
    <string name="placeholder_text">placeholder text</string>
    <string name="create_entry">neuer Eintrag</string>
    <string name="placeholder_date">22.11.1983</string>
    <string name="placeholder_value">123.45</string>
    <string name="icon">Icon</string>
    <string name="list_record_groups">Gruppen</string>
    <string name="records">Einträge</string>
    <string name="tags">Tags</string>
    <string name="edit_tag">Tag bearbeiten</string>
    <string name="edit_record_group">Gruppe bearbeiten</string>
    <string name="edit_record">Eintrag bearbeiten</string>
    <string name="list_types">Typen verwalten</string>
    <string name="edit_type">Type bearbeiten</string>
    <string name="record_group_name">Name</string>
    <string name="record_group_icon">Icon</string>
    <string name="tag_name">Name</string>
    <string name="tag_description">Beschreibung</string>
    <string name="type_suffix">Einheit</string>
    <string name="save_successful">Erfolgreich gespeichert</string>
    <string name="add_record_group">Gruppe erstellen</string>
    <string name="add_tag">Tag erstellen</string>
    <string name="list_tags">Tags verwalten</string>
    <string name="types">Types</string>
    <string name="description">Beschreibung</string>
    <string name="button_delete">Löschen</string>
    <string name="type_format">Werteformat</string>
    <string name="record_date">Datum</string>
    <string name="record_type">Eintragstyp</string>
    <string name="record_tags">Schlagworte</string>
    <string name="record_value">Wert</string>
    <string name="delete_successful">erfolgreich gelöscht</string>
    <string name="type_display_as_integer">ohne  Nachkommastellen ausgeben</string>
</resources>