<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditRecordGroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/record_group_name"
            android:text="@string/tag_name" />

        <EditText
            android:id="@+id/record_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/record_group_description"
            android:text="@string/tag_description" />

        <EditText
            android:id="@+id/record_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/record_group_icon"
            android:text="@string/record_group_icon" />

        <ImageView
            android:id="@+id/record_group_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:contentDescription="@string/icon"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_default" />

        <Button
            android:id="@+id/button_record_group_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_record_group_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/button_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>