<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:orientation="vertical">

        <EditText
            android:id="@+id/type_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:hint="@string/tag_name"
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <EditText
            android:id="@+id/type_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:hint="@string/tag_description"
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <EditText
            android:id="@+id/type_suffix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:hint="@string/type_suffix"
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <Button
            android:id="@+id/button_tag_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>