<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/big_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/record_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big_padding"
        android:textSize="@dimen/big_font" />

    <TextView
        android:id="@+id/record_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_padding"
        android:hint="@string/type"
        android:textSize="@dimen/big_font" />

    <TextView
        android:id="@+id/record_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_padding"
        android:hint="@string/tag"
        android:textSize="@dimen/big_font" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/record_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:textSize="@dimen/big_font" />
        <TextView
            android:id="@+id/record_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/big_padding"
            android:textSize="@dimen/big_font" />
    </LinearLayout>

    <Button
        android:id="@+id/button_record_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />
</LinearLayout>