<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big_padding"
        android:textSize="@dimen/big_font"
        android:id="@+id/date" />

    <TextView
        android:hint="@string/type"
        android:id="@+id/type"
        android:textSize="@dimen/big_font"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:hint="@string/tag"
        android:id="@+id/tag"
        android:textSize="@dimen/big_font"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/value"
        android:id="@+id/value"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textSize="@dimen/big_font"
        android:inputType="numberDecimal" />

</LinearLayout>