<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditTagFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tag_name"
            android:text="@string/tag_name" />

        <EditText
            android:id="@+id/tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tag_description"
            android:text="@string/tag_description" />

        <EditText
            android:id="@+id/tag_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints=""
            android:inputType="text"
            android:textSize="@dimen/big_font" />

        <Button
            android:id="@+id/button_tag_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_tag_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/button_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>